# MLTooling

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PLOTS.md  README.md  build.sh  repo_rules.md
bindings/c/: CMakeLists.txt
bindings/c#/MLTooling/: MLTooling.csproj
bindings/c#/MLTooling/Bindings/: MltError.cs  MltNative.cs  MltWrapper.cs
bindings/c#/MLTooling/Core/: Handles.cs  Shape.cs
bindings/c#/MLTooling/Lab/: LogisticRegression.cs  LogisticRegressionExample.py
bindings/c#/MLTooling/Math/: MatrixF.cs  VectorF.cs
bindings/c#/MLTooling/Models/: LinearRegression.cs
bindings/c#/MLTooling/native-cpp/win-x64/: PlaceholderForCwrapper.txt
bindings/c#/tests/MLTooling.Playground/: MLTooling.Playground.csproj  Program.cs
bindings/c/include/: MLToolingCapi.h
bindings/c/include/Container/: Mat.h  Shape.h
bindings/c/include/Models/: LinearRegression.h
bindings/c/src/: LinearRegression.cpp
bindings/c/src/Container/: Mat.cpp  Shape.cpp
bindings/c/src/Models/: LinearRegression.cpp
bindings/c/test/: test.c  testdef.h
bindings/python/: docs.md  main.py  pyproject.toml  setup.py  test.py
bindings/python/MLTooling/: __init__.py  _matrix.pxd  exceptions.py  matrix.pxd  matrix.pyx  mlt_status.py
bindings/python/MLTooling/core/: __init__.py  dtypes.py  shape.py
bindings/python/MLTooling/math/: __init__.py  _matrix.pxd  matrix.c  matrix.pxd  matrix.pyx
bindings/python/MLTooling/math/matrix/: __init__.py  _matrix.pxd  matrix.pxd  matrix.pyi  matrix.pyx
bindings/python/cython/: Matrix.c
bindings/python/pyMLTooling/: __init__.py  container.py  error.py  model.py  test.py  types_c.py
bindings/python/test/cython/: Matrix.cpp  Matrix.pxd  Matrix.pyx  main.py  setup.py
bindings/python/tests/: container_test.py
bindings/python/tests/math/: test_matrix.py
bindings/rust/mltooling/: Cargo.toml  build.rs
bindings/rust/mltooling/src/: ffi.rs  lib.rs  matrix.rs
cwrapper/: CMakeLists.txt  doc.md
cwrapper/include/mlt/core/: core.h
cwrapper/include/mlt/math/: matrix.h  vector.h
cwrapper/include/mlt/models/: linearRegression.h
cwrapper/src/internal/: linearRegressionInternal.hpp  matrixInternal.hpp  vectorInternal.hpp
cwrapper/src/math/: matrix.cpp  vector.cpp
cwrapper/src/models/: linearRegression.cpp
cwrapper/test/: testdef.h
cwrapper/test/math/: matrixTest.c
examples/: example_basic.cpp
include/: Data.hpp  MLTooling.h  MLTooling.hpp  Mat.h  Math.hpp  Shape.h
include/Container/: Mat.hpp  Shape.hpp
include/Models/: LinearRegressionModel.h  LinearRegressionModel.hpp
include/core/: Exceptions.hpp  Shape.hpp
include/data/: ColumnBase.hpp  DataColumn.hpp  DataFrame.hpp  IDataColumn.hpp  dataUtils.hpp
include/internal/mlt/internal/math/: criticaldef.hpp
include/internal/mlt/internal/math/datastructures/: MatrixStorage.hpp  matrix.hpp  matrixview.hpp
include/internal/mlt/internal/math/kernels/: MatrixKernel.hpp  VectorKernel.hpp  matrixkernels.hpp  vectorkernels.hpp
include/math/: MathLayer.hpp  mathstatus.hpp
include/math/datastructures/: Matrix.hpp  MatrixStorage.hpp  matrix.hpp  matrixview.hpp
include/math/kernels/: MatrixKernel.hpp  matrixkernels.hpp
include/math/opt/: GradientDescent.hpp
include/math/tensors/: Vector.hpp
include/public/: MLTooling.hpp
include/public/Container/: Mat.hpp  Shape.hpp
include/public/Models/: LinearRegressionModel.hpp
include/public/mlt/: Core.hpp  Math.hpp
include/public/mlt/core/: ProxyElement.hpp  Shape.hpp
include/public/mlt/data/: DataColumn.hpp  DataFrame.hpp  IDataColumn.hpp  dataUtils.hpp
include/public/mlt/math/: Exceptions.hpp  Matrix.hpp  Vector.hpp
include/public/mlt/models/: LineareRegression.hpp
src/: Mat.cpp
src/Container/: Mat.cpp
src/Models/: LinearRegressionModel.cpp
src/api/math/: Matrix.cpp  Vector.cpp
src/api/models/: LinearRegression.cpp
src/data/: DataColumn.cpp  DataFrame.cpp
src/math/: MathLayer.cpp  matrix.cpp
src/math/datastructures/: Matrix.cpp  Vector.cpp  matrix.cpp
src/math/kernels/: matrixkernels.cpp
src/math/opt/: GradientDescent.cpp
src/models/: LinearRegression.cpp
test/: Testrunner.h  Testrunner.hpp  test.cpp  testdef.hpp
test/data/: DataFrame.cpp  DataFrameTest.cpp
test/math/datastructures/: MatrixFloatTest.cpp  MatrixTest.cpp  VectorTest.cpp
test/math/kernels/: matrixkernelTest.cpp
test/math/tensor/: MatrixTest.cpp
